# dominion-grpc-proto

./: Makefile  README.md  dominion.proto  pyproject.toml  setup.py
dominion_grpc_proto/: dominion_pb2.py  dominion_pb2_grpc.py
