[tool.poetry]
name = "dominion-grpc-proto"
version = "0.2.0"
description = ""
authors = ["the-gigi <the.gigi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.30.0"
grpcio-tools = "^1.30.0"

[tool.poetry.dev-dependencies]
wheel = "^0.38.1"
twine = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
